--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,22 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cryptography>=46.0.1",
     "docx>=0.2.4",
     "dotenv>=0.9.9",
+    "faiss-cpu>=1.12.0",
     "fastapi>=0.116.2",
     "langchain>=0.3.27",
+    "langchain-community>=0.3.29",
     "langchain-openai>=0.3.33",
+    "langchain-pinecone>=0.2.12",
     "langgraph>=0.6.7",
     "pydantic>=2.11.9",
     "pymupdf>=1.26.4",
+    "pypdf>=6.0.0",
     "pypdf2>=3.0.1",
     "python-docx>=1.2.0",
     "python-multipart>=0.0.20",
+    "sentence-transformers>=5.1.0",
     "uvicorn>=0.35.0",
 ]
